# agno-agents

./: .gitignore  README.md  agno_main.py  autogen_main.py  chart_models.py  diffimgs.py  main.py  pyproject.toml  server.py  translate_img.py  translator.py
golang-mcp/: Makefile  go.mod
mcp_tools/: filesys_mcp_server.py
mcp_tools/Quickchart-MCP-Server/: go.mod  go.sum  index.js  main.go  makefile
mcp_tools/go-mcp-filesys/: go.mod  makefile
mcp_tools/go-mcp-filesys/cmd/server/: main.go
mcp_tools/go-mcp-filesys/internal/filesys/: filesysops.go
mcp_tools/go-mcp-filesys/internal/tools/: tools.go
mcp_tools/go-mcp-k8s/: go.mod  go.sum  makefile
mcp_tools/go-mcp-k8s/cmd/server/: main.go
mcp_tools/go-mcp-k8s/internal/config/: config.go
mcp_tools/go-mcp-k8s/internal/k8s/: client.go
mcp_tools/go-mcp-k8s/internal/tools/: tools.go
mcp_tools/go-mcp-mongodb/: go.mod  go.sum  main.go  makefile
mcp_tools/go-mcp-postgres/: go.mod  go.sum  main.go  makefile
