[project]
name = "agno-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.4.1",
    "duckduckgo-search>=7.5.4",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "jira>=3.8.0",
    "mcp[cli]>=1.6.0",
    "nest-asyncio>=1.6.0",
    "ollama>=0.4.7",
    "sqlalchemy>=2.0.40",
    "yfinance>=0.2.55",
]
